--- a/app/src/main/res/layout/fragment_register_child.xml
+++ b/app/src/main/res/layout/fragment_register_child.xml
@@ -20,7 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="25dp"
+        android:textSize="30dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:text="Buat Profil Anak" />
@@ -81,6 +83,8 @@
         android:layout_gravity="center"
         android:background="@drawable/bg_rounded_15_blue"
         android:text="Daftar Anak"
+            android:textAllCaps="false"
+            android:textSize="20dp"
         android:textColor="@color/white"
         android:theme="@style/Button.Primary"/>
 
