--- a/app/src/main/res/layout/activity_immunization.xml
+++ b/app/src/main/res/layout/activity_immunization.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <ScrollView android:id="@+id/scrollView1"
     android:background="#000000"
     android:layout_width="match_parent"
@@ -26,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="@color/black"
-            android:textSize="20dp"
+            android:textSize="30dp"
+            android:textStyle="bold"
             android:text="Imunisasi Anak" />
 
         <TextView
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="@color/black"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:text="Apakah anak sudah di imunisasi?" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -54,8 +54,8 @@
                 android:layout_marginBottom="5dp">
                 <TextView
                     android:id="@+id/textAnakKeBerapa"
-                    android:paddingStart="15dp"
-                    android:layout_marginTop="10dp"
+                    android:paddingStart="18dp"
+                    android:layout_marginTop="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
@@ -78,8 +78,9 @@
                         android:layout_marginBottom="5dp"
                         android:theme="@style/Button.Primary"
                         android:background="@drawable/bg_rounded_30"
-                        android:textColor="#86BBD0"
+                        android:textColor="@color/white"
                         android:text="Pilih"/>
+
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
