--- a/app/src/main/res/layout/fragment_child_complaint.xml
+++ b/app/src/main/res/layout/fragment_child_complaint.xml
@@ -16,7 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="30dp"
+        android:textStyle="bold"
         android:text="Keluhan Anak" />
 
     <TextView
@@ -24,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textSize="18dp"
         android:textColor="@color/black"
         android:layout_marginBottom="10dp"
         android:text="cara mengatasinya" />
@@ -42,9 +44,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/bg_rounded_15_blue"
-            android:text="demam"
+            android:text="Demam"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="24dp"
+            android:textAllCaps="false"
             android:theme="@style/Button.Primary"/>
 
         <Button
@@ -55,9 +58,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/bg_rounded_15_blue"
-            android:text="DIare"
+            android:text="Diare"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="24dp"
+            android:textAllCaps="false"
             android:theme="@style/Button.Primary"/>
 
         <Button
@@ -70,7 +74,8 @@
             android:background="@drawable/bg_rounded_15_blue"
             android:text="Batuk"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="24dp"
+            android:textAllCaps="false"
             android:theme="@style/Button.Primary"/>
 
         <Button
@@ -81,14 +86,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/bg_rounded_15_blue"
-            android:text="Gatal - gatal"
+            android:text="Gatal-gatal"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="24dp"
+            android:textAllCaps="false"
             android:theme="@style/Button.Primary"/>
 
-
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-
 </androidx.appcompat.widget.LinearLayoutCompat>
