--- a/app/src/main/res/layout/fragment_child_profile.xml
+++ b/app/src/main/res/layout/fragment_child_profile.xml
@@ -16,9 +16,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="20dp"
-        android:text="Profil Anak"
-        android:textColor="@color/black"/>
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:text="Profil Anak"/>
 
     <TextView
         android:id="@+id/textpemantauan"
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="pertumbuhan dan perkembangan anak"
+        android:textSize="14dp"
         android:textColor="@color/black"
         android:layout_marginBottom="10dp"/>
 
@@ -53,8 +55,9 @@
                 android:id="@+id/textViewNamaAnak"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:text="WILLIAM"
+                android:textStyle="bold"
                 android:textColor="#86BBD0"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -75,6 +78,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Berat Badan Ideal"
+                android:textSize="16dp"
+                android:textStyle="bold"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:textColor="@color/black"/>
@@ -90,9 +95,9 @@
                     android:id="@+id/textmasukan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="11dp"
+                    android:textSize="14dp"
                     android:textAlignment="textEnd"
-                    android:text="Masukan\nTinggi Badan"
+                    android:text="Masukan \n Tinggi Badan"
                     android:layout_marginEnd="10dp"
                     android:textColor="@color/black"/>
 
@@ -100,7 +105,7 @@
                     android:id="@+id/editTextTinggi"
                     android:layout_width="75dp"
                     android:layout_height="wrap_content"
-                    android:hint="Tinggi"
+                    android:hint="  Tinggi"
                     android:inputType="numberDecimal"
                     android:background="@drawable/bg_rounded"
                     android:paddingTop="3dp"
@@ -120,6 +125,7 @@
                 android:textColor="@color/white"
                 android:padding="0dp"
                 android:minHeight="0dp"
+                android:textAllCaps="false"
                 android:text="Hitung"/>
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -135,13 +141,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="textEnd"
-                    android:text="Berat\n Badan Ideal"
+                    android:text="Berat \n Badan Ideal"
+                    android:textSize="14dp"
                     android:layout_marginEnd="10dp"
                     android:textColor="@color/black"/>
 
                 <EditText
                     android:id="@+id/editTextBeratBadan"
-                    android:layout_width="100dp"
+                    android:layout_width="75dp"
                     android:layout_height="wrap_content"
                     android:hint="  32 KG"
                     android:inputType="numberDecimal"
