--- a/app/src/main/res/layout/fragment_educational_article.xml
+++ b/app/src/main/res/layout/fragment_educational_article.xml
@@ -31,8 +31,9 @@
                 android:layout_gravity="start"
                 android:paddingEnd="15dp"
                 android:text="Artikel Edukasi"
+                android:textStyle="bold"
                 android:textColor="@color/black"
-                android:textSize="18dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/textpilihan"
@@ -63,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:textSize="20dp"
+                android:textStyle="bold"
                 android:layout_gravity="center"
                 android:text="Tumbuh Kembang Anak"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -110,10 +112,11 @@
                 android:paddingStart="15dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:textSize="20dp"
+                android:textStyle="bold"
                 android:layout_gravity="center"
                 android:text="Kekerasan Anak"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
