--- a/app/src/main/res/layout/fragment_immunization.xml
+++ b/app/src/main/res/layout/fragment_immunization.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView android:id="@+id/scrollView1"
     android:background="#000000"
     android:layout_width="match_parent"
     android:fillViewport="true"
     android:layout_height="match_parent"
-    tools:context=".ImmunizationFragment"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingStart="40dp"
         android:paddingTop="50dp"
         android:paddingEnd="40dp"
-        android:paddingBottom="90dp"
+        tools:context=".ImmunizationActivity"
         android:background="@drawable/bg_rounded_10_background"
         android:orientation="vertical">
 
@@ -24,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="@color/black"
-            android:textSize="20dp"
+            android:textSize="30dp"
+            android:textStyle="bold"
             android:text="Imunisasi Anak" />
 
         <TextView
@@ -33,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="@color/black"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:text="Apakah anak sudah di imunisasi?" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -52,14 +54,13 @@
                 android:layout_marginBottom="5dp">
                 <TextView
                     android:id="@+id/textAnakKeBerapa"
-                    android:paddingStart="15dp"
-                    android:layout_marginTop="10dp"
+                    android:paddingStart="19dp"
+                    android:layout_marginTop="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:textAlignment="textStart"
                     android:text="Anak Pertama"/>
-
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
@@ -76,8 +77,9 @@
                         android:layout_marginBottom="5dp"
                         android:theme="@style/Button.Primary"
                         android:background="@drawable/bg_rounded_30"
-                        android:textColor="#86BBD0"
+                        android:textColor="@color/white"
                         android:text="Pilih"/>
+
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -210,7 +212,7 @@
 
                     <ImageView
                         android:id="@id/imageView"
-                        android:src="@drawable/imunisasi2"
+                        android:src="@drawable/imunisasi3"
                         android:layout_gravity="start"
                         android:layout_width="150dp"
                         android:layout_height="100dp"/>
