--- a/app/src/main/res/layout/fragment_keluhan_detail.xml
+++ b/app/src/main/res/layout/fragment_keluhan_detail.xml
@@ -23,7 +23,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="@color/black"
-            android:textSize="20dp"
+            android:textSize="30dp"
+            android:textStyle="bold"
             android:text="Keluhan Anak" />
 
         <TextView
@@ -32,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="@color/black"
-            android:textSize="15dp"
+            android:textSize="18dp"
             android:text="Cara Mengatasinya" />
 
         <ImageView
@@ -57,6 +58,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:textSize="20dp"
+                android:textStyle="bold"
                 android:textColor="@color/white"
                 android:text="Demam" />
 
@@ -78,6 +80,7 @@
                 android:layout_marginRight="90dp"
                 android:layout_below="@id/textsumber"
                 android:textColor="@color/white"
+                android:textSize="16dp"
                 android:text="1. Berikan kompres" />
 
             <TextView
@@ -89,6 +92,7 @@
                 android:layout_marginRight="90dp"
                 android:layout_below="@id/textcarasembuh"
                 android:textColor="@color/white"
+                android:textSize="16dp"
                 android:text="2. Hindari baju tebal" />
 
             <TextView
@@ -100,6 +104,7 @@
                 android:layout_marginRight="50dp"
                 android:layout_below="@id/textcarasembuh2"
                 android:textColor="@color/white"
+                android:textSize="16dp"
                 android:text="3. Makanan dan minum yang cukup" />
 
             <TextView
@@ -111,6 +116,7 @@
                 android:layout_marginRight="140dp"
                 android:layout_below="@id/textcarasembuh3"
                 android:textColor="@color/white"
+                android:textSize="16dp"
                 android:text="4. Jaga suhu ruangan" />
 
             <TextView
@@ -122,6 +128,7 @@
                 android:layout_marginRight="80dp"
                 android:layout_below="@id/textcarasembuh4"
                 android:textColor="@color/white"
+                android:textSize="16dp"
                 android:text="5. Mandikan dengan air hangat" />
 
             <TextView
@@ -134,6 +141,7 @@
                 android:layout_below="@id/textcarasembuh5"
                 android:textColor="@color/white"
                 android:layout_marginBottom="10dp"
+                android:textSize="16dp"
                 android:text="6. Beri obat-obatan pereda demam" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -142,11 +150,12 @@
             android:id="@+id/textperingatan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             android:layout_gravity="center"
             android:layout_below="@id/textcarasembuh6"
             android:textColor="@color/black"
             android:textAlignment="center"
+            android:textSize="16dp"
             android:text="jika demam semakin parah maka\nanak harus dilarikan ke dokter\nterdekat!" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
