--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -21,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="30dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="Masuk Akun" />
@@ -49,8 +51,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="atau masuk dengan akun\n Google atau Facebook"
+        android:text="atau masuk dengan akun \n Google atau Facebook"
         android:textSize="15dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_marginBottom="10dp"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -100,6 +104,8 @@
             android:layout_gravity="center"
             android:background="@drawable/bg_rounded_15_blue"
             android:text="Masuk"
+            android:textSize="20dp"
+            android:textAllCaps="false"
             android:textColor="@color/white"
             android:theme="@style/Button.Primary"/>
 
