--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -17,8 +17,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="@color/black"
-        android:textSize="20dp"
-        android:text="Forum" />
+        android:textSize="22dp"
+        android:text="Forum"
+        android:textStyle="bold"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -35,7 +36,7 @@
             android:layout_marginBottom="20dp"
             android:layout_gravity="center"
             android:textColor="@color/black"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:text="Artikel Anak" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -53,20 +54,24 @@
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_gravity="start"
+                android:layout_gravity="center_horizontal"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+
                 android:src="@drawable/image1" />
 
             <Button
                 android:id="@+id/buttonuser1"
-                android:layout_width="match_parent"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textSize="12dp"
                 android:theme="@style/Button.Primary"
                 android:background="@drawable/bg_rounded_30"
-                android:text="Bu Ajeng\n Bu, permisi saya mau tanya susu yang bagus untuk umur 3 tahun apa ya?" />
+                android:gravity="left"
+                android:text="Bu Ajeng\nSusu yang bagus untuk umur 3 tahun apa ya?"
+
+                />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -87,20 +92,22 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_gravity="start"
+                android:layout_gravity="center"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/image1" />
 
             <Button
                 android:id="@+id/buttonuser2"
-                android:layout_width="match_parent"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textSize="12dp"
                 android:theme="@style/Button.Primary"
                 android:background="@drawable/bg_rounded_30"
-                android:text="Ibu Sri\nBagaimana cara mengatur emosi untuk tidak melampiaskan ke anak?" />
+                android:gravity="left"
+
+                android:text="Ibu Sri\Cara mengatur emosi untuk tidak melampiaskan ke anak?" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -109,15 +116,16 @@
             android:id="@+id/buttondiskusi"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:text="Tambahkan Diskusi"
-            android:textSize="15dp"
+            android:gravity="center"
+            android:text="Formulir List Diskusi"
+            android:textSize="12dp"
             android:paddingTop="5dp"
             android:textAlignment="center"
             android:layout_marginStart="35dp"
             android:layout_marginEnd="35dp"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="175dp"
+            android:layout_marginBottom="500dp"
             android:colorAccent="@style/Button.White"
             android:background="@drawable/bg_rounded_30"
             android:textColor="@color/black"
