--- a/app/src/main/res/layout/fragment_article_child_violence.xml
+++ b/app/src/main/res/layout/fragment_article_child_violence.xml
@@ -37,7 +37,8 @@
         android:layout_gravity="center"
         android:textColor="@color/black"
         android:textSize="22dp"
-        android:text="Kekerasan Fisik" />
+        android:gravity="center"
+        android:text="Kekerasan Fisik\nPada Anak" />
 
     <ImageView
         android:id="@+id/imageViewArticle"
