--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="center"
         android:textColor="@color/black"
         android:textSize="22dp"
-        android:text="Forum"
+        android:text="Forum Diskusi"
         android:textStyle="bold"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -35,9 +35,13 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_gravity="center"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textSize="18dp"
-            android:text="Artikel Anak" />
+            android:text="Artikel Anak:\Kekerasan Fisik Pada Anak"
+
+
+            />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
