--- a/app/src/main/res/layout/activity_complaint.xml
+++ b/app/src/main/res/layout/activity_complaint.xml
@@ -18,6 +18,7 @@
             android:layout_gravity="center"
             android:textColor="@color/black"
             android:textSize="20dp"
+            android:textStyle="bold"
             android:text="Keluhan Anak" />
 
         <TextView
@@ -41,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginTop="20dp"
             android:background="@drawable/bg_rounded_15_blue">
             <TextView
                 android:id="@+id/textsumber"
@@ -51,6 +53,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:textSize="20dp"
+                android:textStyle="bold"
                 android:textColor="@color/white"
                 android:text="Demam" />
 
@@ -79,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:layout_marginRight="90dp"
             android:layout_below="@id/textcarasembuh"
             android:textColor="@color/white"
@@ -90,7 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:layout_marginRight="50dp"
             android:layout_below="@id/textcarasembuh2"
             android:textColor="@color/white"
@@ -101,7 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:layout_marginRight="140dp"
             android:layout_below="@id/textcarasembuh3"
             android:textColor="@color/white"
@@ -112,7 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:layout_marginRight="80dp"
             android:layout_below="@id/textcarasembuh4"
             android:textColor="@color/white"
@@ -123,7 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:layout_marginRight="50dp"
             android:layout_below="@id/textcarasembuh5"
             android:textColor="@color/white"
@@ -141,6 +144,6 @@
         android:layout_below="@id/textcarasembuh6"
         android:textColor="@color/black"
         android:textAlignment="center"
-        android:text="jika demam semakin parah maka\nanak harus dilarikan ke dokter\nterdekat!" />
+        android:text="Jika demam semakin parah maka\nanak harus dilarikan ke dokter\nterdekat!" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
