--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -38,7 +38,7 @@
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="18dp"
-            android:text="Artikel Anak:\Kekerasan Fisik Pada Anak"
+            android:text="Artikel Anak:\nKekerasan Fisik Pada Anak"
 
 
             />
@@ -111,7 +111,7 @@
                 android:background="@drawable/bg_rounded_30"
                 android:gravity="left"
 
-                android:text="Ibu Sri\Cara mengatur emosi untuk tidak melampiaskan ke anak?" />
+                android:text="Ibu Sri\nCara mengatur emosi untuk tidak melampiaskan ke anak?" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
