--- a/app/src/main/res/layout/fragment_keluhan_detail.xml
+++ b/app/src/main/res/layout/fragment_keluhan_detail.xml
@@ -38,7 +38,8 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="20dp"
             android:layout_width="250dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
@@ -54,6 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
+
                 android:layout_marginEnd="15dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
@@ -80,7 +82,7 @@
                 android:layout_marginRight="90dp"
                 android:layout_below="@id/textsumber"
                 android:textColor="@color/white"
-                android:textSize="16dp"
+                android:textSize="14dp"
                 android:text="1. Berikan kompres" />
 
             <TextView
@@ -88,11 +90,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="90dp"
                 android:layout_below="@id/textcarasembuh"
                 android:textColor="@color/white"
-                android:textSize="16dp"
+                android:textSize="14dp"
                 android:text="2. Hindari baju tebal" />
 
             <TextView
@@ -100,11 +102,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="50dp"
                 android:layout_below="@id/textcarasembuh2"
                 android:textColor="@color/white"
-                android:textSize="16dp"
+                android:textSize="14dp"
                 android:text="3. Makanan dan minum yang cukup" />
 
             <TextView
@@ -112,11 +114,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="140dp"
                 android:layout_below="@id/textcarasembuh3"
                 android:textColor="@color/white"
-                android:textSize="16dp"
+                android:textSize="14dp"
                 android:text="4. Jaga suhu ruangan" />
 
             <TextView
@@ -124,11 +126,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="80dp"
                 android:layout_below="@id/textcarasembuh4"
                 android:textColor="@color/white"
-                android:textSize="16dp"
+                android:textSize="14dp"
                 android:text="5. Mandikan dengan air hangat" />
 
             <TextView
@@ -136,12 +138,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="50dp"
                 android:layout_below="@id/textcarasembuh5"
                 android:textColor="@color/white"
                 android:layout_marginBottom="10dp"
-                android:textSize="16dp"
+                android:textSize="14dp"
                 android:text="6. Beri obat-obatan pereda demam" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -156,7 +158,7 @@
             android:textColor="@color/black"
             android:textAlignment="center"
             android:textSize="16dp"
-            android:text="jika demam semakin parah maka\nanak harus dilarikan ke dokter\nterdekat!" />
+            android:text="Jika demam semakin parah maka\nanak harus dilarikan ke dokter\nterdekat!" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </ScrollView>
