--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -158,6 +158,7 @@
                 android:layout_height="wrap_content"
                 android:text="Aktivitas Baru"
                 android:layout_gravity="center"
+                android:textStyle="bold"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:textSize="20dp"
