--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -23,8 +23,8 @@
         android:textSize="30dp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
         android:text="Masuk Akun" />
 
     <EditText
@@ -43,7 +43,7 @@
         android:layout_height="40dp"
         android:background="@drawable/bg_rounded"
         android:ems="10"
-        android:hint="  Buat Kata Sandi"
+        android:hint="  Kata Sandi"
         android:layout_marginBottom="25dp"
         android:inputType="textPassword" />
 
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="atau masuk dengan akun \nGoogle atau Facebook"
+        android:text="atau masuk dengan akun \n  Google atau Facebook"
         android:textSize="15dp"
         android:textColor="@color/black"
         android:textStyle="bold"
