--- a/app/src/main/res/layout/fragment_artikel_kekerasan_fisik.xml
+++ b/app/src/main/res/layout/fragment_artikel_kekerasan_fisik.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ArticleChildViolenceFragment">
+    tools:context=".ArtikelKekerasanFisikFragment">
 
 <androidx.appcompat.widget.LinearLayoutCompat
     android:layout_width="match_parent"
@@ -53,11 +53,11 @@
         android:layout_marginTop="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="start"
         android:textColor="@color/black"
         android:textSize="20dp"
-        android:textAlignment="center"
-        android:text="  Kekerasan fisik adalah agresi fisik diarahkan pada seorang anak oleh orang dewasa. Hal ini dapat melibatkan meninju, memukul, menendang, mendorong, menampar, membakar, membuat memar, menarik telinga atau rambut, menusuk, membuat tersedak atau menguncang seorang anak. Pada usia ini otak anak mengalami pertumbuhan yang sangat pesat yang dikenal dengan istilah emas." />
+        android:textAlignment="textStart"
+        android:text="     Kekerasan fisik adalah agresi fisik diarahkan pada seorang anak oleh orang dewasa. Hal ini dapat melibatkan meninju, memukul, menendang, mendorong, menampar, membakar, membuat memar, menarik telinga atau rambut, menusuk, membuat tersedak atau menguncang seorang anak. Pada usia ini otak anak mengalami pertumbuhan yang sangat pesat yang dikenal dengan istilah emas." />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
 
