--- a/app/src/main/res/layout/fragment_activity_anak.xml
+++ b/app/src/main/res/layout/fragment_activity_anak.xml
@@ -43,7 +43,7 @@
             android:layout_height="180dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            tools:src="@drawable/image7" />
+            android:src="@drawable/image7" />
 
         <TextView
             android:id="@+id/textinfo1"
