--- a/app/src/main/res/layout/fragment_child_profile.xml
+++ b/app/src/main/res/layout/fragment_child_profile.xml
@@ -89,7 +89,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:gravity="center">
+                android:gravity="center"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/textmasukan"
@@ -126,7 +127,8 @@
                 android:padding="0dp"
                 android:minHeight="0dp"
                 android:textAllCaps="false"
-                android:text="Hitung"/>
+                android:text="Hitung"
+                android:visibility="gone"/>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
