--- a/app/src/main/res/layout/fragment_immunization.xml
+++ b/app/src/main/res/layout/fragment_immunization.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:paddingStart="40dp"
         android:paddingTop="50dp"
+        android:paddingBottom="80dp"
         android:paddingEnd="40dp"
         tools:context=".ImmunizationActivity"
         android:background="@drawable/bg_rounded_10_background"
