--- a/app/src/main/res/layout/fragment_change_pass.xml
+++ b/app/src/main/res/layout/fragment_change_pass.xml
@@ -1,6 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#E2F1F8"
+    android:paddingTop="50dp"
+    android:paddingStart="40dp"
+    android:paddingEnd="40dp"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
+        android:text="Ganti Password" />
+
+    <!--android:id="@+id/editTextEmail" -->
+    <EditText
+
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/bg_rounded"
+        android:ems="10"
+        android:hint="  Password Baru "
+        android:layout_marginBottom="15dp"
+        android:inputType="textEmailAddress" />
+    <EditText
+
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/bg_rounded"
+        android:ems="10"
+        android:hint="  Masukan Kembali "
+        android:layout_marginBottom="15dp"
+        android:inputType="textEmailAddress" />
+
+    <!--android:id="@+id/buttonLogin" -->
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/bg_rounded_15_blue"
+        android:text="Ganti Password"
+        android:textSize="20dp"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:theme="@style/Button.Primary"/>
+
+</LinearLayout>
