--- a/app/src/main/res/layout/fragment_change_pass.xml
+++ b/app/src/main/res/layout/fragment_change_pass.xml
@@ -18,7 +18,7 @@
         android:textColor="@color/black"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"
-        android:text="Ganti Password" />
+        android:text="Ganti Kata Sandi" />
 
     <!--android:id="@+id/editTextEmail" -->
     <EditText
@@ -27,7 +27,7 @@
         android:layout_height="40dp"
         android:background="@drawable/bg_rounded"
         android:ems="10"
-        android:hint="  Password Baru "
+        android:hint="  Kata Sandi Baru "
         android:layout_marginBottom="15dp"
         android:inputType="textEmailAddress" />
     <EditText
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/bg_rounded_15_blue"
-        android:text="Ganti Password"
+        android:text="Ganti Sandi"
         android:textSize="20dp"
         android:textAllCaps="false"
         android:textColor="@color/white"
